methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:5: error: ':' expected but ')' found.
def hunt(x) {while (!estSurBiscuit()) {if (isFacingTrail(x)) {baisseBrosse();avance();leveBrosse()};
          ^SlugSnail:15: error: identifier expected but '}' found.
}
^